<resources>
    <string name="app_name">LiveScoringApp</string>
    <string name="title_screen_message">Welcome to Live Score</string>
    <string name="tips_for_a_smooth_experience">Tips for a smooth experience</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="chat_fragment_title">Welcome to chat area</string>
    <string name="add_comment_user_name_hint">user name</string>
    <string name="add_comment_hint">comment</string>
    <string name="add_comment_category">Sport</string>
    <string name="add_comment_button_text">Add comment</string>
    <string name="description_of_chat_image">photo of chat icon</string>
    <string name="chat_design_userName_text">userName</string>
    <string name="chat_design_category_text">category</string>
    <string name="chat_design_message_text">message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_spinner_select_label">Select sport</string>
    <string name="basketball_chat">Basketball chat</string>
    <string name="football_chat">Football chat</string>
    <string name="ball_separator">ball_separator</string>
</resources>